@@ -18,6 +18,9 @@
 #
 ## set msgfilter(smtp,originator) "nbsp@localhost";
 ## set msgfilter(smtp,servers)	"localhost";
+## set msgfilter(smtp,options) [list]; # for other options (if needed) such as
+                                       # -username <u> -password <p> ...
+#
 ## set msgfilter(syslogid)	"nbsp-msgfilter";
 ## set msgfilter(syslogpri)	"user.err";
 
