@@ -36,6 +36,8 @@ set msgfilter(ugczones)  [file join $common(confdir) "msgfilter-ugczones.def"];
 #
 set msgfilter(smtp,originator) "nbsp@localhost";
 set msgfilter(smtp,servers)    "localhost";
+set msgfilter(smtp,options) [list]; # for other options (if needed) such as
+                                    # -username <u> -password <p> ...
 #
 # The priority may be specified as a ``facility.level'' pair.
 # For example, ``local3.info'' logs the message as informational
@@ -126,7 +128,7 @@ proc process {finfo} {
     }
 
     set prod_name $rc(fname);
-    set prod_body [::fileutil::cat $rc(fpath)];
+    set prod_body [::fileutil::cat -translation crlf $rc(fpath)];
     if {$msgfilter(ccbsaved) == 1} {
 	set prod_body [string range $prod_body $msgfilter(ccbsize) end];
     }
@@ -235,11 +237,12 @@ proc msgfilter_smtp_send_txt {recipients subject body} {
 
     set token [mime::initialize -canonical text/plain -string $body];
 
-    set result [smtp::sendmessage $token \
-		    -originator $msgfilter(smtp,originator) \
-		    -servers $msgfilter(smtp,servers) \
-		    -recipients [join $recipients ","] \
-		    -header [list Subject $subject]];
+    set cmd [list smtp::sendmessage $token \
+		-originator $msgfilter(smtp,originator) \
+		-servers $msgfilter(smtp,servers) \
+		-recipients [join $recipients ","] \
+		-header [list Subject $subject]];
+    set result [eval $cmd $msgfilter(smtp,options)];
 
     mime::finalize $token;
 
